Fix z-index

--- a/www/src/styles/constants.scss
+++ b/www/src/styles/constants.scss
@@ -159,6 +159,7 @@ $nusmods-theme-colors: (
 );
 
 // Z-index
+$snackbar-z-index: 2500;
 $sentry-z-index: 2000;
 $modal-z-index: 1500;
 $module-select-z-index: 960;
